# php-downloader

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: release.yml
src/: config.rs  downloads.rs  extract.rs  hooks.rs  main.rs  view.rs
