[package]
name = "php-downloader"
version = "0.1.3"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
bzip2 = "0.6.1"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
filetime = "0.2.26"
flate2 = "1.1.8"
futures = "0.3.31"
indicatif = "0.18.3"
num-format = "0.4.4"
regex = "1.12.2"
reqwest = { version ="0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2.5.0"
xz = "0.1.0"

[build-dependencies]
chrono = "0.4.43"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
