[package]
name = "php-downloader"
version = "0.1.3"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
bzip2 = "0.6.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.3"
colored = "3.1.1"
filetime = "0.2.27"
flate2 = "1.1.9"
futures = "0.3.32"
indicatif = "0.18.4"
num-format = "0.4.4"
regex = "1.12.3"
reqwest = { version ="0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["full"] }
walkdir = "2.5.0"
xz = "0.1.0"

[build-dependencies]
chrono = "0.4.44"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
